Updates to chum, refs

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -1,62 +1,137 @@
 
 @article{holt_evaluating_2018,
-	title = {Evaluating Benchmarks of Biological Status for Data-limited Conservation Units of Pacific Salmon, Focusing on Chum Salmon in Southern {BC}},
-	pages = {87},
+	title = {Evaluating {Benchmarks} of {Biological} {Status} for {Data}-limited {Conservation} {Units} of {Pacific} {Salmon}, {Focusing} on {Chum} {Salmon} in {Southern} {BC}},
+	language = {en},
 	author = {Holt, Carrie and Davis, Brooke and Dobson, Diana and Godbout, Lyse and Luedke, Wilf and Tadey, Joe},
-	date = {2018},
-	langid = {english},
+	year = {2018},
+	pages = {87},
 	file = {Holt et al. - Evaluating Benchmarks of Biological Status for Dat.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\7NS65E5G\\40759386.pdf:application/pdf},
 }
 
-@report{van_will_inner_2014,
-	title = {Inner South Coast Chum Stock Reconstructions (1953-2013)},
-	pages = {30},
+@techreport{van_will_inner_2014,
+	title = {Inner {South} {Coast} {Chum} {Stock} {Reconstructions} (1953-2013)},
+	language = {en},
 	author = {Van Will, Pieter},
-	date = {2014},
-	langid = {english},
+	year = {2014},
+	pages = {30},
 	file = {Will - Inner South Coast Chum Stock Reconstructions (1953.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\LZ6IPMIA\\Will - Inner South Coast Chum Stock Reconstructions (1953.pdf:application/pdf},
 }
 
-@report{holtby_conservation_2007,
-	title = {Conservation Units for Pacific Salmon under the Wild Salmon Policy},
+@techreport{holtby_conservation_2007,
+	type = {Research {Document}},
+	title = {Conservation {Units} for {Pacific} {Salmon} under the {Wild} {Salmon} {Policy}},
 	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/334860.pdf},
-	pages = {358},
 	number = {2007/070},
 	institution = {Fisheries and Oceans Canada},
-	type = {Research Document},
 	author = {Holtby, L. Blair and Ciruna, Kristine  A.},
-	date = {2007},
+	year = {2007},
+	pages = {358},
 	file = {334860.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\A26ES6NW\\334860.pdf:application/pdf},
 }
 
 @article{debertin_marine_2017,
-	title = {Marine growth patterns of southern British Columbia chum salmon explained by interactions between density-dependent competition and changing climate},
+	title = {Marine growth patterns of southern {British} {Columbia} chum salmon explained by interactions between density-dependent competition and changing climate},
 	volume = {74},
 	issn = {0706-652X, 1205-7533},
 	url = {http://www.nrcresearchpress.com/doi/10.1139/cjfas-2016-0265},
 	doi = {10.1139/cjfas-2016-0265},
-	abstract = {Thirty-nine years of scale growth measurements from Big Qualicum River chum salmon (Oncorhynchus keta) in southern British Columbia demonstrated that competition and climate variation affect marine growth and age-at-maturity. A longitudinal study design that accounted for correlation among individuals revealed growth at all ages was reduced when the biomass of North American chum, sockeye (Oncorhynchus nerka), and pink salmon (Oncorhynchus gorbuscha) was high. When North Paciﬁc Gyre Oscillation ({NPGO}) was positive, indicating increased primary productivity, predicted growth increased. Climate variation inﬂuenced competition effects. For instance, density-dependent competition effects increased when {NPGO} became more positive and Paciﬁc Decadal Oscillation became more negative (indicating cool conditions), causing the greatest range in predicted scale size. Chum salmon are likely to exhibit continued reduction in growth at age due to increased ocean temperatures driven by climate change and high aggregate salmon biomass that includes hatchery releases. If evidence of biomass and climate effects presented here are common among Paciﬁc salmon populations, reduction of hatchery releases should be considered.},
-	pages = {1077--1087},
+	abstract = {Thirty-nine years of scale growth measurements from Big Qualicum River chum salmon (Oncorhynchus keta) in southern British Columbia demonstrated that competition and climate variation affect marine growth and age-at-maturity. A longitudinal study design that accounted for correlation among individuals revealed growth at all ages was reduced when the biomass of North American chum, sockeye (Oncorhynchus nerka), and pink salmon (Oncorhynchus gorbuscha) was high. When North Paciﬁc Gyre Oscillation (NPGO) was positive, indicating increased primary productivity, predicted growth increased. Climate variation inﬂuenced competition effects. For instance, density-dependent competition effects increased when NPGO became more positive and Paciﬁc Decadal Oscillation became more negative (indicating cool conditions), causing the greatest range in predicted scale size. Chum salmon are likely to exhibit continued reduction in growth at age due to increased ocean temperatures driven by climate change and high aggregate salmon biomass that includes hatchery releases. If evidence of biomass and climate effects presented here are common among Paciﬁc salmon populations, reduction of hatchery releases should be considered.},
+	language = {en},
 	number = {7},
-	journaltitle = {Canadian Journal of Fisheries and Aquatic Sciences},
-	shortjournal = {Can. J. Fish. Aquat. Sci.},
-	author = {Debertin, Allan J. and Irvine, James R. and Holt, Carrie A. and Oka, Gladys and Trudel, Marc},
 	urldate = {2021-01-28},
-	date = {2017-07},
-	langid = {english},
+	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+	author = {Debertin, Allan J. and Irvine, James R. and Holt, Carrie A. and Oka, Gladys and Trudel, Marc},
+	month = jul,
+	year = {2017},
+	pages = {1077--1087},
 	file = {Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\WE5J4EFQ\\Debertin et al. - 2017 - Marine growth patterns of southern British Columbi.pdf:application/pdf},
 }
 
-@report{canada_canadas_2005,
-	location = {Vancouver},
-	title = {Canada's policy for conservation of wild Pacific salmon},
+@techreport{canada_canadas_2005,
+	address = {Vancouver},
+	title = {Canada's policy for conservation of wild {Pacific} salmon},
 	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/315577.pdf},
+	language = {en},
 	institution = {Fisheries and Oceans Canada},
-	editora = {Canada},
-	editoratype = {collaborator},
-	date = {2005},
-	langid = {english},
-	note = {{OCLC}: ocm61863454},
+	collaborator = {Canada},
+	year = {2005},
+	note = {OCLC: ocm61863454},
 	keywords = {Canada, Conservation Government policy, Pacific salmon},
 	file = {315577.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\XH8BPDZC\\315577.pdf:application/pdf},
+}
+
+@article{holt_indicators_2009,
+	title = {Indicators of {Status} and {Benchmarks} for {Conservation} {Units} in {Canada}'s {Wild} {Salmon} {Policy}},
+	abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
+	language = {en},
+	author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
+	year = {2009},
+	pages = {82},
+	file = {Holt et al. - Indicateurs de l’état des stocks et repères à l’in.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\UGUG3PWI\\Holt et al. - Indicateurs de l’état des stocks et repères à l’in.pdf:application/pdf},
+}
+
+@techreport{hilborn_british_2012,
+	title = {British {Columbia} {Chum} {Salmon} (\textit{{Oncorhynchus} keta}) {Fisheries}: {British} {Columbia} {Coastal} and {Adjacent} {Canadian} {Pacific} {EEZ} {Waters}, {Final} {Certification} {Report}.},
+	url = {https://www.psf.ca/sites/default/files/20121203_FR_CHUM_SAL318.pdf},
+	language = {en},
+	number = {82506},
+	institution = {Submitted to Canadian Pacific Sustainable Fisheries Society},
+	author = {Hilborn, Ray and Schmidt, Dana and English, Karl and Devitt, Steve},
+	year = {2012},
+	pages = {458},
+	file = {BC Chum FCR_27Nov12_Final.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\KZ9QIW9G\\BC Chum FCR_27Nov12_Final.pdf:application/pdf},
+}
+
+@techreport{piston_chum_2011,
+	address = {Anchorage},
+	title = {Chum salmon stock status and escapement goals in {Southeast} {Alaska}},
+	url = {https://www.adfg.alaska.gov/static/regulations/regprocess/fisheriesboard/pdfs/2011-2012/se_finfish/sp11-21.pdf},
+	language = {en},
+	number = {Special Publication No. 11-21},
+	institution = {Alaska Department of Fish and Game},
+	author = {Piston, Andrew W and Heinl, Steven C},
+	year = {2011},
+	pages = {65},
+	file = {Piston - Chum salmon stock status and escapement goals in S.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\QSYQU36Y\\Piston - Chum salmon stock status and escapement goals in S.pdf:application/pdf},
+}
+
+@article{otis_escapement_nodate,
+	title = {Escapement goals for salmon stocks in {Lower} {Cook} {Inlet}, {Alaska}},
+	language = {en},
+	author = {Otis, Edward O},
+	pages = {31},
+	file = {Otis - Escapement goals for salmon stocks in Lower Cook I.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\H9WTQHBJ\\Otis - Escapement goals for salmon stocks in Lower Cook I.pdf:application/pdf},
+}
+
+@incollection{quinn_evaluation_2017,
+	title = {An {Evaluation} of the {Percentile} {Approach} for {Establishing} {Sustainable} {Escapement} {Goals} in {Lieu} of {Stock} {Productivity} {Information}},
+	url = {https://seagrant.uaf.edu/bookstore/pubs/item.php?id=12385},
+	language = {en},
+	urldate = {2021-05-14},
+	booktitle = {Assessing and {Managing} {Data}-{Limited} {Fish} {Stocks}},
+	publisher = {Alaska Sea Grant, University of Alaska Fairbanks},
+	author = {Clark, Ra and Eggers, Dm and Munro, Ar and Fleischman, Sj and Bue, Bg and Hasbrouck, Jj},
+	editor = {Quinn, Tj and Armstrong, Jl and Baker, Mr and Heifetz, Jd},
+	collaborator = {Witherell, D},
+	month = feb,
+	year = {2017},
+	doi = {10.4027/amdlfs.2016.08},
+	file = {Clark et al. - 2017 - An Evaluation of the Percentile Approach for Estab.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\N2JI7RQF\\Clark et al. - 2017 - An Evaluation of the Percentile Approach for Estab.pdf:application/pdf},
+}
+
+@article{litz_competition_2021,
+	title = {Competition with odd-year pink salmon in the ocean affects natural populations of chum salmon from {Washington}},
+	volume = {663},
+	issn = {0171-8630, 1616-1599},
+	url = {https://www.int-res.com/abstracts/meps/v663/p179-195/},
+	doi = {10.3354/meps13622},
+	abstract = {Over the last 5 decades, natural populations of pink (Oncorhynchus gorbuscha) and chum (O. keta) salmon were the most abundant salmon species returning to Washington, USA. Pink salmon predominantly returned in odd years, and chum salmon stocks that interacted with pink salmon exhibited strong even- and odd-year variations in abundance, size, age-at-maturity, and productivity (recruits-per-spawner). We investigated the effects of competition between pink and chum salmon originating from Washington during different life-history phases. Overall, chum salmon returns were 34\% lower in pink salmon (odd) years compared to non-pink salmon (even) years. Chum salmon productivity tended to be below average for odd broods, especially along the Washington coast where there are no pink salmon populations, suggesting that competition during overlapping marine periods established their distinct even- and odd-year patterns. We evaluated long-term trends in chum (and pink) salmon productivity using correlation and time series analysis and examined the influence of ocean indicators on those trends. In general, chum salmon productivity increased between brood years 1968 and 1989 and was positively related to summertime Pacific Decadal Oscillation (PDO), but declined between brood years 1990 and 2012 and was negatively related to the PDO. Pink salmon productivity had no directional trend, but exhibited declines over the last decade and was negatively related to the PDO over the entire time series. Chum salmon productivity was also negatively related to pink salmon abundance, supporting the conclusion that ocean conditions and competition accounted for brood-year differences in chum salmon age-at-maturity and lower returns in odd versus even years.},
+	language = {en},
+	urldate = {2021-05-14},
+	journal = {Marine Ecology Progress Series},
+	author = {Litz, Mnc and Agha, M and Dufault, Am and Claiborne, Am and Losee, Jp and Anderson, Aj},
+	month = mar,
+	year = {2021},
+	pages = {179--195},
+	file = {Litz et al. - 2021 - Competition with odd-year pink salmon in the ocean.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\H6KKI3CF\\Litz et al. - 2021 - Competition with odd-year pink salmon in the ocean.pdf:application/pdf},
 }
